# struct

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE
include/: struct.h
include/struct/: struct.h
src/: endian.c  endian.h  struct.c  struct_endian.c  struct_endian.h
test/: BUILD  struct_test.cpp
